crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@52.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '1&2&4&5&6'::tsquery;"
---
SelectStmt@0..28
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..27
    TypeCast@7..27
      AConst@7..18
        Sconst@7..18 "'1&2&4&5&6'"
      Typecast@18..20 "::"
      TypeName@20..27
        Ident@20..27 "tsquery"
  Ascii59@27..28 ";"

