crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@54.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT '1&(2&(4&(5|!6)))'::tsquery;"
---
SelectStmt@0..35
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..34
    TypeCast@7..34
      AConst@7..25
        Sconst@7..25 "'1&(2&(4&(5|!6)))'"
      Typecast@25..27 "::"
      TypeName@27..34
        Ident@27..34 "tsquery"
  Ascii59@34..35 ";"

