crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@55.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT E'1&(''2''&('' 4''&(\\\\|5 | ''6 \\\\'' !|&'')))'::tsquery;"
---
SelectStmt@0..62
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..61
    TypeCast@7..61
      AConst@7..52
        Sconst@7..52 "E'1&(''2''&('' 4''&(\\ ..."
      Typecast@52..54 "::"
      TypeName@54..61
        Ident@54..61 "tsquery"
  Ascii59@61..62 ";"

