crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@56.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT $$'\\\\as'$$::tsquery;"
---
SelectStmt@0..27
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..26
    TypeCast@7..26
      AConst@7..17
        Sconst@7..17 "$$'\\\\as'$$"
      Typecast@17..19 "::"
      TypeName@19..26
        Ident@19..26 "tsquery"
  Ascii59@26..27 ";"

