crates/pg_syntax/tests/snapshots/postgres_regress/tstypes@57.snap
---
source: crates/pg_syntax/tests/pg_syntax_tests.rs
description: "SELECT 'a:* & nbb:*ac | doo:a* | goo'::tsquery;"
---
SelectStmt@0..47
  Select@0..6 "SELECT"
  Whitespace@6..7 " "
  ResTarget@7..46
    TypeCast@7..46
      AConst@7..37
        Sconst@7..37 "'a:* & nbb:*ac | doo: ..."
      Typecast@37..39 "::"
      TypeName@39..46
        Ident@39..46 "tsquery"
  Ascii59@46..47 ";"

